<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.logregister.fragments.logreg.LogInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/title_reg_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/sign_in_title"
        android:textAllCaps="true"
        android:textColor="#4D1F9F"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide" />

    <Button
        android:id="@+id/signin_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/logo_minimal_purple"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toEndOf="@+id/title_reg_log"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/square_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/mini_square"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/title_reg_log"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_enter"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/enter_text_border"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="@+id/top_guide" />

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/enter_text_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/username_enter" />

    <TextView
        android:id="@+id/reg_text_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/signin_description"
        android:textColor="#6C6873"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/password_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>