<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.mainmenu.fragments.membership.MembershipFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/counter_answers_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/your_answer_question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/your_answea_question"
        android:textColor="#532E95"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_it_button" />

    <TextView
        android:id="@+id/remaining_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/remaihihg_question"
        android:textColor="#532E95"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/counter_answers_guide"
        app:layout_constraintEnd_toStartOf="@+id/question_counter_guide"
        app:layout_constraintStart_toStartOf="@+id/your_answer_question_text"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <Button
        android:id="@+id/answer_it_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/answer_it"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/your_answer_question_text"
        app:layout_constraintStart_toStartOf="@+id/your_answer_question_text"
        app:layout_constraintTop_toTopOf="@+id/counter_answers_guide" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:src="@drawable/logo_minimal_purple"
        app:layout_constraintBottom_toTopOf="@+id/counter_answers_guide"
        app:layout_constraintEnd_toEndOf="@+id/your_answer_question_text"
        app:layout_constraintStart_toStartOf="@+id/logo_guide"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/radio_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <ImageButton
        android:id="@+id/pay_memb_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:background="@null"
        android:src="@null"
        app:layout_constraintBottom_toBottomOf="@+id/pay_memb_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pay_sam_text" />

    <ImageButton
        android:id="@+id/free_memb_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:background="@null"
        android:src="@null"
        app:layout_constraintBottom_toBottomOf="@+id/free_quastion_text"
        app:layout_constraintEnd_toEndOf="@+id/free_quastion_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/free_membership_text" />

    <RadioButton
        android:id="@+id/free_memb_radio"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:button="@null"
        android:clickable="false"
        android:checked="true"
        android:drawableRight="@drawable/radio_checked_selector"
        app:layout_constraintBottom_toBottomOf="@+id/free_quastion_text"
        app:layout_constraintEnd_toStartOf="@+id/radio_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/free_membership_text" />

    <RadioButton
        android:id="@+id/pay_memb_radio"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:button="@null"
        android:clickable="false"
        android:drawableRight="@drawable/radio_checked_selector"
        app:layout_constraintBottom_toBottomOf="@+id/pay_memb_description"
        app:layout_constraintEnd_toStartOf="@+id/radio_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pay_sam_text" />

    <TextView
        android:id="@+id/free_membership_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/free_membership"
        android:textColor="#532E95"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radio_guide"
        app:layout_constraintTop_toBottomOf="@+id/your_answer_question_text" />

    <TextView
        android:id="@+id/free_quastion_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/free_quastion_description"
        android:textColor="#532E95"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radio_guide"
        app:layout_constraintTop_toBottomOf="@+id/free_membership_text" />

    <TextView
        android:id="@+id/pay_sam_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/pay_sam"
        android:textColor="#532E95"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radio_guide"
        app:layout_constraintTop_toBottomOf="@+id/free_quastion_text" />

    <TextView
        android:id="@+id/pay_memb_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/add_quastion_description"
        android:textColor="#532E95"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radio_guide"
        app:layout_constraintTop_toBottomOf="@+id/pay_sam_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/question_counter_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logo_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7469586" />

</androidx.constraintlayout.widget.ConstraintLayout>